# spdr-pipeline

./: .gitignore  boilterplate  main.py  main.tf  pyproject.toml  spdr pipeline.ipynb  variables.tf
.github/workflows/: spdr_pipeline.yml
pipeline/: Dockerfile  docker-compose (2).yaml  docker-compose.yaml  exit  pipeline.ipynb  pipeline.py  pyproject.toml  spdr_pipeline.ipynb  spdr_pipeline.py  sql.txt
