[project]
name = "spdr-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.11.3",
    "dbt-core>=1.11.11",
    "google-cloud-storage>=3.1.1",
    "pandas>=3.0.4",
    "pyarrow>=24.0.0",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.6.0",
    "ruff>=0.15.20",
]
