[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "duckdb>=1.5.4",
    "pandas>=3.0.3",
    "psycopg[binary,pool]>=3.3.4",
    "pyarrow>=24.0.0",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.68.3",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.9",
    "ruff>=0.15.18",
]
